<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_handmate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="723dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="374dp"
                    android:layout_height="697dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/top_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="635dp"
                        android:layout_marginStart="@dimen/additem_blackgrount_marginStart"
                        android:layout_marginTop="@dimen/additem_blackgrount_marginTop"
                        android:layout_marginEnd="@dimen/additem_blackgrount_marginEnd"
                        android:layout_marginBottom="@dimen/additem_blackgrount_marginBottom"
                        android:background="@drawable/white_blackground"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:id="@+id/view8"
                            android:layout_width="match_parent"
                            android:layout_height="11dp" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:text="@string/pic"
                            android:textSize="20dp" />

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="match_parent"
                            android:layout_height="179dp"
                            app:srcCompat="@drawable/h6" />

                        <EditText
                            android:id="@+id/editTextTextPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/item_name" />

                        <View
                            android:id="@+id/view4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:background="@color/blackground_1" />

                        <EditText
                            android:id="@+id/editTextTextPersonName2"
                            android:layout_width="match_parent"
                            android:layout_height="77dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/price" />

                        <View
                            android:id="@+id/view6"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:background="@color/blackground_1" />

                        <EditText
                            android:id="@+id/editTextTextPersonName3"
                            android:layout_width="match_parent"
                            android:layout_height="79dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/catagory" />

                        <View
                            android:id="@+id/view7"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:background="@color/blackground_1" />

                        <EditText
                            android:id="@+id/editTextTextPersonName4"
                            android:layout_width="match_parent"
                            android:layout_height="121dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/description" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/additem_button_margin"
                android:background="@drawable/blackground_button"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

